--- a/containers/docker/develop-alpine/Dockerfile
+++ b/containers/docker/develop-alpine/Dockerfile
@@ -3,12 +3,12 @@ FROM alpine:3.7
 RUN \
   apk add --update go git make gcc musl-dev linux-headers ca-certificates && \
   git clone --depth 1 https://github.com/ethereum/go-ethereum && \
-  (cd go-ethereum && make geth) && \
-  cp go-ethereum/build/bin/geth /geth && \
+  (cd go-ethereum && make yooba) && \
+  cp go-ethereum/build/bin/yooba /yooba && \
   apk del go git make gcc musl-dev linux-headers && \
   rm -rf /go-ethereum && rm -rf /var/cache/apk/*
 
 EXPOSE 8545
 EXPOSE 30303
 
-ENTRYPOINT ["/geth"]
+ENTRYPOINT ["/yooba"]
