--- a/swarm/dev/Makefile
+++ b/swarm/dev/Makefile
@@ -4,7 +4,7 @@ default: build
 
 build:
 	go build -o bin/swarm    github.com/ethereum/go-ethereum/cmd/swarm
-	go build -o bin/geth     github.com/ethereum/go-ethereum/cmd/geth
+	go build -o bin/yooba     github.com/ethereum/go-ethereum/cmd/yooba
 	go build -o bin/bootnode github.com/ethereum/go-ethereum/cmd/bootnode
 
 cluster: build
